; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/gpio/dwgpio/extr_dwgpio_bus.c_dwgpiobus_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/gpio/dwgpio/extr_dwgpio_bus.c_dwgpiobus_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwgpiobus_softc = type { i32 }

@dwgpio_spec = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @dwgpiobus_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dwgpiobus_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.dwgpiobus_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.dwgpiobus_softc* @device_get_softc(i32 %4)
  store %struct.dwgpiobus_softc* %5, %struct.dwgpiobus_softc** %3, align 8
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @dwgpio_spec, align 4
  %8 = load %struct.dwgpiobus_softc*, %struct.dwgpiobus_softc** %3, align 8
  %9 = getelementptr inbounds %struct.dwgpiobus_softc, %struct.dwgpiobus_softc* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @bus_release_resources(i32 %6, i32 %7, i32 %10)
  ret i32 0
}

declare dso_local %struct.dwgpiobus_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_release_resources(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
